--- a/LR3/CMakeLists.txt
+++ b/LR3/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.0)
 
 set(SOURCES
-    main.cpp
     time.cpp
 )
 
@@ -9,4 +8,18 @@ set(HEADERS
     time.hpp
 )
 
-add_executable(LR3 ${HEADERS} ${SOURCES})
+add_library(LR3_lib STATIC ${HEADERS} ${SOURCES})
+add_executable(LR3  main.cpp)
+target_link_libraries(LR3 PRIVATE LR3_lib)
+
+find_package(GTest MODULE)
+
+if(GTest_FOUND)
+    enable_testing()
+    include_directories(${GTEST_INCLUDE_DIRS})
+    add_executable(LR3-test test.cpp)
+    target_link_libraries(LR3-test PRIVATE LR3_lib GTest::GTest GTest::Main)
+    add_test(AllTestsIn LR3-test)
+endif()
+
+
