Angle class LR4

--- a/LR4/CMakeLists.txt
+++ b/LR4/CMakeLists.txt
@@ -1,10 +1,12 @@
 cmake_minimum_required(VERSION 3.0)
 
 set(SOURCES
+    angle.cpp
     main.cpp
 )
 
 set(HEADERS
+    angle.hpp
 )
 
 add_executable(LR4 ${HEADERS} ${SOURCES})
